[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/HomeScreen.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.784314)

[node name="HomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.133333, 0.254902, 0.137255, 1.0)

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -200
margin_right = 200
margin_bottom = 50
custom_colors/font_color = Color(1, 1, 1, 1)
text = "FARMBIT"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -150
margin_right = 150
margin_bottom = 30
custom_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
text = "A Peaceful Farming Life"
align = 1
valign = 1

[node name="MenuPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150
margin_top = -100
margin_right = 150
margin_bottom = 100
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20
margin_top = 20
margin_right = -20
margin_bottom = -20
custom_constants/separation = 10

[node name="StartButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_right = 260
margin_bottom = 35
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
text = "Start Game"

[node name="LoadButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 45
margin_right = 260
margin_bottom = 80
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 90
margin_right = 260
margin_bottom = 125
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 135
margin_right = 260
margin_bottom = 160
custom_styles/normal = SubResource( 2 )
text = "Quit"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100
margin_top = -30
margin_right = -10
margin_bottom = -10
custom_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
text = "v1.0.0"
align = 2